# werewolf

./: Procfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: merge_master_to_dev.yml  semantic-release.yml  tests.yml
werewolf/: conftest.py  manage.py  pytest.ini  wsgi.py
werewolf/authentication/: admin.py  models.py  urls.py  views.py
werewolf/authentication/migrations/: 0001_create_user.py
werewolf/authentication/templates/: login.html  logout.html  register.html
werewolf/authentication/tests/: factories.py
werewolf/gamemaster/: __init__.py  apps.py  game_steps.py  models.py  signals.py
werewolf/gamemaster/migrations/: 0001_initial.py
werewolf/gamemaster/tests/: test_steps.py
werewolf/werewolf/: asgi.py  forms.py  models.py  permissions.py  serializers.py  settings.py  test_settings.py  urls.py  views.py
werewolf/werewolf/core/: game.py
werewolf/werewolf/migrations/: 0001_create_game.py  0001_initial.py  0002_add_players.py  0002_create_round.py  0003_add_round.py  0003_create_player.py  0004_add_actions_and_game_permissions.py  0004_create_actions.py  0005_add_new_characters.py  0005_make_action_unique_by_round.py
werewolf/werewolf/models/: __init__.py  actions.py  character.py  events.py  game.py
werewolf/werewolf/templates/: base.html  game.html  home.html  join_game.html  navbar.html  new_game.html  start_game.html
werewolf/werewolf/tests/: factories.py  test_game_management.py  test_play.py
werewolf/werewolf/views/: game.py  games.py  generics.py  play.py
(+1 files in other folders)
